<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_sweeper_layer_1_hardware_bringup</name>
  <version>0.0.0</version>
  <description>Bringup file to initiate the hardware layer of the AMR-Sweeper</description>
  <maintainer email="info@O-Robotics.com">O-Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>amr_sweeper_battery</exec_depend>
  <exec_depend>amr_sweeper_description</exec_depend>
  <exec_depend>amr_sweeper_depth_camera</exec_depend>
  <exec_depend>amr_sweeper_gnss</exec_depend>
  <exec_depend>amr_sweeper_imu</exec_depend>
  <exec_depend>amr_sweeper_microros</exec_depend>
  <exec_depend>amr_sweeper_odrive</exec_depend>
  <exec_depend>amr_sweeper_steadydrive</exec_depend>
  <exec_depend>amr_sweeper_usb_cameras</exec_depend>
  <exec_depend>amr_sweeper_system_info</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
