<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_sweeper_gnss</name>
  <version>0.0.0</version>
  <description>Consolidated GNSS stack for AMR Sweeper (ublox + NTRIP)</description>
  <maintainer email="info@O-Robotics.com">O-Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>ublox_dgnss</depend>
  <depend>ublox_dgnss_node</depend>
  <depend>ublox_nav_sat_fix_hp_node</depend>
  <depend>ntrip_client</depend>
  <depend>rtcm_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
