<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_sweeper_steadydrive</name>
  <version>0.0.0</version>
  <description>ROS2 Control Hardware Interface wrapper for the steadydrive motors.</description>

  <author email="info@O-Robotics.com">O-Robotics</author>
  <maintainer email="info@O-Robotics.com">O-Robotics</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>alitrak_can_driver</depend>
  <depend>hardware_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- <exec_depend>alitrak_control</exec_depend> -->
  <!-- <exec_depend>alitrak_platform_description</exec_depend> -->
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
